--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -1,10 +1,12 @@
 input, textarea, select {
   appearance: none;
   width: 100%;
-  border-radius: 0.5rem;
-  border: 1px solid var(--stroke-default);
-
   padding: 0.75rem 1rem;
+  
+  border-radius: 0.5rem;
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
+
   font: var(--text);
   color: var(--text-primary);
 
@@ -34,8 +36,9 @@ input:focus, select:focus, textarea:focus,
 input[type="date"]:focus-within {
   
   outline: 0.25rem solid var(--surface-secondary);
-  border:  0.125rem solid var(--stroke-highlight);
   outline-offset: .1px;
+  border-color: var(--stroke-highlight);
+
 }
 
 div:has(> #birth) {
